<resources>
  <string name="General_AppName">News Media Scan</string>
  <string name="Onboarding_WhatIsOONIProbe_Title">Are news media sites blocked?</string>
  <string name="Onboarding_WhatIsOONIProbe_Paragraph">Run News Media Scan to find out! News Media Scan is the #1 app to give you transparency about the news landscape in whatever country you currently find yourself. Additionally, by using the app, you are making an important contribution to the measurement of censorship around the world.\n\nThe list you see in the app is a public, community-curated list on GitHub and not curated by DW. It represents an objective range of international and national news media providers.</string>
  <string name="Onboarding_WhatIsOONIProbe_GotIt">Got It</string>
  <string name="Onboarding_ThingsToKnow_Title">Heads-up!</string>
  <string name="Onboarding_ThingsToKnow_Bullet_1">OONI will openly publish the measurement data you send, along with your network information.</string>
  <string name="Onboarding_ThingsToKnow_Bullet_2">Anyone monitoring your Internet connection will be able to see you are running News Media Scan.</string>
  <string name="Onboarding_ThingsToKnow_Bullet_3">You will be testing news websites that might be banned in the country where you currently find yourself.</string>
  <string name="Onboarding_ThingsToKnow_Button">I understand</string>
  <string name="Onboarding_ThingsToKnow_LearnMore">Learn more</string>
  <string name="Onboarding_PopQuiz_Title">Pop Quiz</string>
  <string name="Onboarding_PopQuiz_True">True</string>
  <string name="Onboarding_PopQuiz_False">False</string>
  <string name="Onboarding_PopQuiz_Wrong_Button_Back">Go back</string>
  <string name="Onboarding_PopQuiz_Wrong_Button_Continue">Continue</string>
  <string name="Onboarding_PopQuiz_1_Title">Question 1/2</string>
  <string name="Onboarding_PopQuiz_1_Question">If someone is monitoring my internet activity, they will see that I am running News Media Scan.</string>
  <string name="Onboarding_PopQuiz_1_Wrong_Title">Warning</string>
  <string name="Onboarding_PopQuiz_1_Wrong_Paragraph">News Media Scan is not a privacy tool. Anyone monitoring your internet activity will see which software you are running.</string>
  <string name="Onboarding_PopQuiz_2_Title">Question 2/2</string>
  <string name="Onboarding_PopQuiz_2_Question">Every time I run News Media Scan, the network data I collect will automatically get published.</string>
  <string name="Onboarding_PopQuiz_2_Wrong_Title">Warning</string>
  <string name="Onboarding_PopQuiz_2_Wrong_Paragraph">To increase transparency of internet censorship, the network data of all News Media Scan users is automatically published (unless they opt-out in the settings).</string>
  <string name="Onboarding_AutomatedTesting_Title">Automated testing</string>
  <string name="Onboarding_AutomatedTesting_Paragraph">To measure internet censorship every day, please enable automated testing so that News Media Scan can run tests periodically.\n\nDon’t worry, we’ll be mindful of battery usage.\n\nYou can disable automated testing from the settings at any time.</string>
  <string name="Onboarding_Crash_Title">Crash Reporting</string>
  <string name="Onboarding_Crash_Paragraph">To improve News Media Scan we would like to collect anonymous crash reports when the app does not work properly.\n\nWould you like to opt-in to submitting crash reports to the OONI development team?</string>
  <string name="Onboarding_Crash_Button_Yes">Yes</string>
  <string name="Onboarding_Crash_Button_No">No</string>
  <string name="Onboarding_DefaultSettings_Title">Default Settings</string>
  <string name="Onboarding_DefaultSettings_Header">We collect and publish:</string>
  <string name="Onboarding_DefaultSettings_Bullet_1">Country code (e.g. IT for Italy)</string>
  <string name="Onboarding_DefaultSettings_Bullet_2">Network information (including Autonomous System Number)</string>
  <string name="Onboarding_DefaultSettings_Bullet_3">Time &amp; date of testing</string>
  <string name="Onboarding_DefaultSettings_Paragraph">We do our best not to publish your IP address or any other potentially personally identifiable information.\n\nLearn more through [OONI\'s Data Policy](https://ooni.org/about/data-policy/).</string>
  <string name="Onboarding_DefaultSettings_Paragraph_1">By tapping \"OK\", you will share crash reports to help us improve OONI Probe.</string>
  <string name="Onboarding_DefaultSettings_Button_Go">Let\'s go</string>
  <string name="Onboarding_DefaultSettings_Button_Change">Change defaults</string>
  <string name="Dashboard_Tab_Label">Dashboard</string>
  <string name="Dashboard_Card_Run">Run</string>
  <string name="Dashboard_Overview_LastRun_Never">N/A</string>
  <string name="Dashboard_Overview_Run">Run</string>
  <string name="Dashboard_Overview_LatestTest">Last test:</string>
  <string name="Dashboard_Overview_Estimated">Estimated:</string>
  <string name="Dashboard_Overview_ChooseWebsites">Choose websites</string>
  <string name="Dashboard_Running_Running">Running:</string>
  <string name="Dashboard_Running_EstimatedTimeLeft">Estimated time left:</string>
  <string name="Dashboard_Running_Seconds">%1$s seconds</string>
  <string name="Dashboard_Running_PreparingTest">Preparing test</string>
  <string name="Dashboard_Running_CalculatingETA">Calculating ETA</string>
  <string name="Dashboard_Running_ShowLog">Show Log</string>
  <string name="Dashboard_Running_CloseLog">Close Log</string>
  <string name="Dashboard_Running_Stopping_Title">Stopping test…</string>
  <string name="Dashboard_Running_Stopping_Notice">Finishing the currently pending tests, please wait…</string>
  <string name="Dashboard_Running_ProxyInUse">Proxy in use</string>
  <string name="Dashboard_Card_Subtitle">Tap card for more</string>
  <string name="Dashboard_Card_Seconds">~%1$ss</string>
  <string name="Dashboard_Websites_Card_Description">Checks for blocking of news media websites</string>
  <string name="Dashboard_Websites_Overview_Paragraph">Check whether websites are blocked using OONI\'s [Web Connectivity test](https://ooni.org/nettest/web-connectivity/).\n\nEvery time you tap Run, you test different websites from the Citizen Lab\'s [global](https://github.com/citizenlab/test-lists/blob/master/lists/global.csv) and [country-specific](https://github.com/citizenlab/test-lists/tree/master/lists) test lists.\n\nTo test the sites of your choice, tap the Choose websites button or select categories of sites via the settings of this card. \n\nThis test measures whether websites are blocked by means of DNS tampering, TCP/IP blocking or by a transparent HTTP proxy.\n\nYour results will be published on [OONI Explorer](https://explorer.ooni.org/world/) and [OONI API](https://api.ooni.io/).</string>
  <string name="Dashboard_Websites_Overview_Paragraph_Desktop">Check whether websites are blocked using OONI\'s [Web Connectivity test](https://ooni.org/nettest/web-connectivity/).\n\nYou will test the websites included in the Citizen Lab\'s [global](https://github.com/citizenlab/test-lists/blob/master/lists/global.csv) and [country-specific](https://github.com/citizenlab/test-lists/tree/master/lists) test lists.\n\nThis test measures whether websites are blocked by means of DNS tampering, TCP/IP blocking or by a transparent HTTP proxy.\n\nYour results will be published on [OONI Explorer](https://explorer.ooni.org/) and [OONI API](https://api.ooni.io/).</string>
  <string name="Dashboard_Performance_Card_Description">Test your network speed and performance</string>
  <string name="Dashboard_Performance_Overview_Paragraph">Measure the speed and performance of your network using the [NDT](https://ooni.org/nettest/ndt/) test.\n\nMeasure video streaming performance using the [DASH](https://ooni.org/nettest/dash/) test.\n\nThese tests consume data depending on your network speed.\n\nYour results will be published on [OONI Explorer](https://explorer.ooni.org/world/) and [OONI API](https://api.ooni.io/).\n\nDisclaimer: These tests rely on third party servers. We therefore cannot guarantee that your IP address will not be collected.</string>
  <string name="Dashboard_Performance_Overview_Paragraph_Updated">By running the tests in this card, you will:\n\n- Measure the speed and performance of your network ([NDT](https://ooni.org/nettest/ndt/) test)\n- Measure video streaming performance ([DASH](https://ooni.org/nettest/dash/) test)\n- Check for the presence of [middlebox technologies](https://ooni.org/support/glossary/#middlebox) on your network ([HTTP Invalid Request Line](https://ooni.org/nettest/http-invalid-request-line/) and [HTTP Header Field Manipulation](https://ooni.org/nettest/http-header-field-manipulation/) tests)\n\nThese tests consume data depending on your network speed.\n\nYour test results will be published on [OONI Explorer](https://explorer.ooni.org/) and [OONI API](https://api.ooni.io/).\n\n**Disclaimer:** The [NDT](https://ooni.org/nettest/ndt/) and [DASH](https://ooni.org/nettest/dash/) tests are conducted against third-party servers provided by [Measurement Lab (M-Lab)](https://www.measurementlab.net/). If you run these tests, M-Lab will collect and publish your IP address (for research purposes), irrespective of your OONI Probe settings. Learn more about M-Lab’s data governance through its [privacy statement](https://www.measurementlab.net/privacy/).</string>
  <string name="Dashboard_Middleboxes_Card_Description">Detect middleboxes in your network</string>
  <string name="Dashboard_Middleboxes_Overview_Paragraph">Internet Service Providers often use network appliances (middleboxes) for various networking purposes (such as caching). Sometimes these middleboxes are used to implement internet censorship and/or surveillance.\n\nFind middleboxes in your network using OONI\'s [HTTP Invalid Request Line](https://ooni.org/nettest/http-invalid-request-line/) and [HTTP Header Field Manipulation](https://ooni.org/nettest/http-header-field-manipulation/) tests.\n\nYour results will be published on [OONI Explorer](https://explorer.ooni.org/world/) and [OONI API](https://api.ooni.io/).</string>
  <string name="Dashboard_InstantMessaging_Card_Description">Test the blocking of instant messaging apps</string>
  <string name="Dashboard_InstantMessaging_Overview_Paragraph">Check whether [WhatsApp](https://ooni.org/nettest/whatsapp/), [Facebook Messenger](https://ooni.org/nettest/facebook-messenger/), [Telegram](https://ooni.org/nettest/telegram/), and [Signal](https://ooni.org/nettest/signal) are blocked.\n\nYour results will be published on [OONI Explorer](https://explorer.ooni.org/world/) and [OONI API](https://api.ooni.io/).</string>
  <string name="Dashboard_Circumvention_Card_Description">Test the blocking of censorship circumvention tools</string>
  <string name="Dashboard_Circumvention_Overview_Paragraph">Check whether [Psiphon](https://ooni.org/nettest/psiphon/), [Tor](https://ooni.org/nettest/tor/) or [RiseupVPN](https://ooni.org/nettest/riseupvpn/) are blocked.\n\nYour results will be published on [OONI Explorer](https://explorer.ooni.org/) and [OONI API](https://api.ooni.io/).</string>
  <string name="Dashboard_Experimental_Card_Description">Run new experimental tests</string>
  <string name="Dashboard_Experimental_Overview_Paragraph">Run the following new experimental tests developed by the OONI team:\n%1$s\n\nYour results will be published on [OONI Explorer](https://explorer.ooni.org/) and [OONI API](https://api.ooni.io/).</string>
  <string name="Dashboard_Experimental_Overview_Paragraph_AutomatedTesting">The following tests will only be run as part of automated testing:</string>
  <string name="Dashboard_DisabledTests_Label">Disabled Tests</string>
  <string name="TestResults_Gbps">Gbit/s</string>
  <string name="TestResults_Mbps">Mbit/s</string>
  <string name="Modal_OK">OK</string>
  <string name="Modal_DisableVPN_Title">Please disable your VPN connection.</string>
</resources>