<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:id="@+id/dialog"
		android:layout_width="match_parent"
		android:layout_height="256dp"
		android:background="@drawable/dialog_quiz"
		android:orientation="vertical">

		<TextView
			style="@style/TextAppearance.MaterialComponents.Headline5"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:gravity="center_horizontal"
			android:text="@string/Onboarding_PopQuiz_Title"
			android:textColor="@android:color/white" />

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@android:color/white" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_margin="16dp"
			android:layout_weight="1"
			android:orientation="vertical">

			<TextView
				android:id="@+id/title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:textColor="@android:color/white" />

			<TextView
				android:id="@+id/question"
				style="@style/TextAppearance.MaterialComponents.Body1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:gravity="center_horizontal"
				android:textColor="@android:color/white" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/positive"
				android:layout_width="0dp"
				android:layout_height="48dp"
				android:layout_weight="1"
				android:background="@drawable/button_dialog_true"
				android:gravity="center"
				android:text="@string/Onboarding_PopQuiz_True"
				android:textColor="@android:color/white" />

			<TextView
				android:id="@+id/negative"
				android:layout_width="0dp"
				android:layout_height="48dp"
				android:layout_weight="1"
				android:background="@drawable/button_dialog_false"
				android:gravity="center"
				android:text="@string/Onboarding_PopQuiz_False"
				android:textColor="@color/color_red9" />
		</LinearLayout>
	</LinearLayout>

	<com.airbnb.lottie.LottieAnimationView
		android:id="@+id/animation"
		android:layout_width="match_parent"
		android:layout_height="256dp"
		android:scaleType="centerCrop"
		android:visibility="gone" />
</FrameLayout>
